第四頁內容與排版＆第二頁平板版的頁面排版

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="css/locate.css">
     <link rel="stylesheet" href="css/coffeeImgMedia.css">
     <link rel="stylesheet" href="css/pag3.css">
+    <link rel="stylesheet" href="css/pag4.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <script src="dist/jquery-loader.js"></script>
@@ -192,10 +193,19 @@
                             <a href="#">
                                 <li data-remodal-target="modal_2">哥倫比亞</li>
                             </a>
-                            <li data-remodal-target="modal_3" href="#">印尼</li>
-                            <li data-remodal-target="modal_4">衣索比亞</li>
-                            <li data-remodal-target="modal_5">肯亞</li>
-                            <li data-remodal-target="modal_6">夏威夷</li>
+                            <a href="#">
+                                <li data-remodal-target="modal_3">印尼</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_4">衣索比亞</li>
+
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_5">肯亞</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_6">夏威夷</li>
+                            </a>
                         </ul>
                     </div>
                 </div>
@@ -203,10 +213,18 @@
                     <p class="p3_but">處理過程</p>
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
-                            <li data-remodal-target="modal_7">日曬法</li>
-                            <li data-remodal-target="modal_8">水洗法</li>
-                            <li data-remodal-target="modal_9">半日曬法</li>
-                            <li data-remodal-target="modal_10">半水洗法</li>
+                            <a href="">
+                                <li data-remodal-target="modal_7">日曬法</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_8">水洗法</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_9">半日曬法</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_10">半水洗法</li>
+                            </a>
                         </ul>
                     </div>
 
@@ -215,14 +233,31 @@
                     <p class="p3_but">烘培</p>
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
-                            <li data-remodal-target="modal_11">極淺焙</li>
-                            <li data-remodal-target="modal_12">淺焙</li>
-                            <li data-remodal-target="modal_13">中焙</li>
-                            <li data-remodal-target="modal_14">中深焙</li>
-                            <li data-remodal-target="modal_15">程式烘焙</li>
-                            <li data-remodal-target="modal_16">深焙</li>
-                            <li data-remodal-target="modal_17">法式烘焙</li>
-                            <li data-remodal-target="modal_18">重焙</li>
+                            <a href="#">
+                                <li data-remodal-target="modal_11">極淺焙</li>
+
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_12">淺焙</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_13">中焙</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_14">中深焙</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_15">程式烘焙</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_16">深焙</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_17">法式烘焙</li>
+                            </a>
+                            <a href="#">
+                                <li data-remodal-target="modal_18">重焙</li>
+                            </a>
                         </ul>
                     </div>
                 </div>
@@ -364,18 +399,21 @@
             <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
         </div>
 
-
-        <!-- <div class="circle">
-
-        </div>
-
-        <div class="p3_1 speech-bubble speech-bubble-right">
-            箭头在右侧
-        </div> -->
-
     </div>
     <div id="forth">
 
+        <div class="col-md-12">
+            <p id="pag2_text">豆の烘焙</p>
+        </div>
+
+        <div class="p4_main">
+            <h1>&emsp;為什麼咖啡會這麼香？</h1>
+            <p class="text-justify lead" style="font-size:20px;">
+
+                <br>&emsp;&emsp;最重要的當然是咖啡豆本身就儲存了豐富的各種原料 ，如碳水化合物、蛋白質、脂類、有機酸等…… 再經過受熱烘培就會啟動一連串複雜的反應，而造就出誘 人的香氣。
+                <br>&emsp;&emsp;而當中重要的兩種反應當屬焦糖化反應（caramelization，醣的氧化與褐變） 與梅納反應（Maillard reaction，胺基酸與醣類的反應） 這兩種反應都需要醣類的參與，生豆中含量豐富的蔗糖， 正好提供了這兩種反應所需的材料。 先前的研究也發現蔗糖含量與咖啡豆風味有著正向的相關性。 從下表中可以看出阿拉比卡（Arabica）的蔗糖（Sucrose） 在生豆時含量是羅布斯塔（Robusta）的兩倍， 也說明了阿拉比卡種的咖啡豆風味優於羅布斯塔的原因。
+            </p>
+        </div>
     </div>
 
 
