--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                     <li class="test">
                         <a href="#third">
                             <div class="text">
-                                烘培藝術
+                                美味過程
                             </div>
                         </a>
                     </li>
                     <li class="test">
                         <a href="#forth">
                             <div class="text">
-                                品味咖啡
+                                烘焙藝術
                             </div>
                         </a>
                     </li>
@@ -115,7 +115,7 @@
         <div class="container-fluid">
             <div class="row" style="padding-top:10px;">
 
-                <div class="col-md-12   ">
+                <div class="col-md-12 col-md-offset-4 ">
                     <p id="pag2_text">百種の豆</p>
                 </div>
                 <div class="col-md-2 col-xs-6 pag2_coffee">
@@ -210,7 +210,7 @@
                     </div>
                 </div>
                 <div class="col-md-2 ">
-                    <p class="p3_but">處理過程</p>
+                    <p class="p3_but">處理</p>
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
                             <a href="">
@@ -402,7 +402,7 @@
     </div>
     <div id="forth">
 
-        <div class="col-md-12">
+        <div class="col-md-12 col-md-offset-4">
             <p id="pag2_text">豆の烘焙</p>
         </div>
 
