拿掉豆子測試

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 
     <div id="home">
 
-        <img class="pag_bg1" src="images/coffees.png">
+        <!-- <img class="pag_bg1" src="images/coffees.png">
         <img class="pag_bg2" src="images/coffees.png">
-        <img class="pag_bg3" src="images/coffees.png">
+        <img class="pag_bg3" src="images/coffees.png"> -->
         <img id="homeIcon" src="images/home_icon.png" />
         <img id="an" src="images/homeText.png" />
 
@@ -173,7 +173,7 @@
             </p>
         </div>
 
-        <img class="pag_bg1" style="top:130%;" src="images/coffees.png">
+        <!-- <img class="pag_bg1" style="top:130%;" src="images/coffees.png"> -->
 
     </div>
     <div id="third">
