修正網頁寬度bug

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 
     <div id="home">
 
-        <!-- <img class="pag_bg1" src="images/coffees.png">
+        <img class="pag_bg1" src="images/coffees.png">
         <img class="pag_bg2" src="images/coffees.png">
-        <img class="pag_bg3" src="images/coffees.png"> -->
+        <img class="pag_bg3" src="images/coffees.png">
         <img id="homeIcon" src="images/home_icon.png" />
         <img id="an" src="images/homeText.png" />
 
@@ -115,7 +115,7 @@
         <div class="container-fluid">
             <div class="row" style="padding-top:10px;">
 
-                <div class="col-md-8 col-md-offset-4 ">
+                <div class="col-md-8 col-md-offset-4">
                     <p id="pag2_text">百種の豆</p>
                 </div>
                 <div class="col-md-2 col-xs-6 pag2_coffee">
@@ -173,7 +173,7 @@
             </p>
         </div>
 
-        <!-- <img class="pag_bg1" style="top:130%;" src="images/coffees.png"> -->
+        <img class="pag_bg1" style="top:130%;" src="images/coffees.png">
 
     </div>
     <div id="third">
@@ -402,12 +402,12 @@
     </div>
     <div id="forth">
 
-        <div class="col-md-8 col-md-offset-4">
-            <p id="pag2_text">豆の烘焙</p>
+        <div class="col-md-12">
+            <p id="pag3_text">豆の烘焙</p>
         </div>
 
         <div class="p4_main">
-            <h1>&emsp;為什麼咖啡會這麼香？</h1>
+            <h3>&emsp;為什麼咖啡會這麼香？</h3>
             <p class="text-justify lead" style="font-size:20px;">
 
                 <br>&emsp;&emsp;最重要的當然是咖啡豆本身就儲存了豐富的各種原料 ，如碳水化合物、蛋白質、脂類、有機酸等…… 再經過受熱烘培就會啟動一連串複雜的反應，而造就出誘 人的香氣。
