新增第四頁面內容

--- a/index.html
+++ b/index.html
@@ -423,9 +423,11 @@
             <div class="row" style="padding-top:10px;">
 
                 <div class="col-md-2">
-                    <div class="p4_c">
+                    <div class="p4_c col-md-1">
                         <img src="images/coffee_p4/c01.png" class="p4_cof">
-
+                    </div>
+                    <div class="p4_main_1 col-md-1 col-md-offset-1">
+                        將會影響品質的豆子挑出來，比如被蟲蛀過的
                     </div>
                 </div>
                 <div class="col-md-2">
@@ -467,7 +469,10 @@
 
         </div>
 
+
     </div>
+
+
 
     <!-- <div class="p4_main">
             <h3>&emsp;為什麼咖啡會這麼香？</h3>
