完成第四頁面

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 $('.test a').on('click', function() {
                     $('.navbar-toggle').click();
                 });
-
-            });
+            })
         }
     </script>
 
@@ -111,8 +110,6 @@
         </div>
     </nav>
 
-
-
     <div id="home">
 
         <img class="pag_bg1" src="images/coffees.png">
@@ -170,7 +167,7 @@
         <div class="p2_main">
             <p class="text-justify lead" style="font-size:20px;">
                 &emsp;&emsp;瓜地馬拉咖啡豆的豆表光滑硬度高，微酸香醇且順口， 特殊的煙燻味極為誘人，味道香醇而稍具野性，是混合式咖啡的最佳材料， 其分類依海拔標高分為七個等級。產於高地者越香醇，而產於低地的咖啡豆，品質則較低落。
-                <br/>&emsp;&emsp;瓜地馬拉為日本人最熟悉的咖啡豆，第一產地位於緊臨墨西哥山嶽地帶的聖馬爾克斯; 第二產地為南部的凱薩兒德南哥。其他尚有戈邦、安地古亞也很有名， 這種咖啡豆的特色在於醇度很高，在單品中僅次於曼特寧，但因為成本較高， 在一般綜合咖啡中反而少見到他的蹤影。
+                <br/>&emsp;&emsp;瓜地馬拉為日本人最熟悉的咖啡豆，第一產地位於緊臨墨西哥山嶽地帶的聖馬爾克斯; 第二產地為南部的凱薩兒德南哥。其他尚有戈邦、安地古亞也很有名， 這種咖啡豆的特色在於醇度很高，在單品中僅次於曼特寧
             </p>
         </div>
         <div class="p2_main">
@@ -181,8 +178,7 @@
         </div>
         <div class="p2_main">
             <p class="text-justify lead" style="font-size:20px;">
-                &emsp;&emsp;藍山咖啡香味較淡，喝起來卻非常香醇滑口，沒有苦苦的味道， 但它卻帶了一點點的酸，馥郁的果香，優質且均衡的內容，一般都單品種飲用， 乃咖啡中最好品種。因為產量極少，價格昂貴，一般人很少喝得到真正的藍山， 多是味道極近似的咖啡所調製，但價格仍比一般咖啡高昂。
-                <br/>&emsp;&emsp;藍山咖啡豆的形狀飽滿， 而且平均比一般豆子還要大，中間的白色裂紋，是經過水洗的處理， 產自牙買加藍山海拔2500尺以上的斜坡上，屬於咖啡中的極品，價位也是最高的一種。
+                &emsp;&emsp;藍山咖啡香味較淡，喝起來卻非常香醇滑口，沒有苦苦的味道， 但它卻帶了一點點的酸，馥郁的果香，優質且均衡的內容，一般都單品種飲用， 乃咖啡中最好品種。 藍山咖啡豆的形狀飽滿， 而且平均比一般豆子還要大，中間的白色裂紋，是經過水洗的處理， 產自牙買加藍山海拔2500尺以上的斜坡上，屬於咖啡中的極品，價位也是最高的一種。
             </p>
         </div>
 
@@ -416,57 +412,120 @@
     <div id="forth">
 
         <div class="col-md-12">
-            <p id="pag3_text">豆の烘焙</p>
+            <p id="pag3_text" style="padding-top:70px;">豆の烘焙</p>
         </div>
 
         <div class="container-fluid">
             <div class="row" style="padding-top:10px;">
 
                 <div class="col-md-2">
-                    <div class="p4_c col-md-1">
+                    <div class="p4_c">
                         <img src="images/coffee_p4/c01.png" class="p4_cof">
+
                     </div>
-                    <div class="p4_main_1 col-md-1 col-md-offset-1">
-                        將會影響品質的豆子挑出來，比如被蟲蛀過的
+                    <div class="p4_main_1">
+                        將會影響品質的豆子挑出來
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="p4_c">
                         <img src="images/coffee_p4/c02.png" class="p4_cof">
-
+                    </div>
+                    <div class="p4_main_1">
+                        開始烘焙！進豆前要先預熱鍋爐
                     </div>
 
                 </div>
                 <div class="col-md-2">
                     <div class="p4_c">
                         <img src="images/coffee_p4/c03.png" class="p4_cof">
-
                     </div>
-
+                    <div class="p4_main_1">
+                        豆子在這個時候開始吸熱
+                    </div>
                 </div>
                 <div class="col-md-2">
                     <div class="p4_c">
                         <img src="images/coffee_p4/c04.png" class="p4_cof">
-
                     </div>
-
+                    <div class="p4_main_1">
+                        加熱！要讓火力加熱到一定程度
+                    </div>
                 </div>
                 <div class="col-md-2">
                     <div class="p4_c">
                         <img src="images/coffee_p4/c05.png" class="p4_cof">
-
                     </div>
-
+                    <div class="p4_main_1">
+                        等待一爆，依豆色評估烘焙程度
+                    </div>
                 </div>
                 <div class="col-md-2">
                     <div class="p4_c">
                         <img src="images/coffee_p4/c06.png" class="p4_cof">
-
                     </div>
-
+                    <div class="p4_main_1">
+                        下豆後冷卻
+                    </div>
                 </div>
             </div>
 
+        </div>
+
+        <div class="container-fluid">
+            <div class="row" style="padding-top:10px;">
+
+
+                <div class="col-md-2 col-xs-6 pag2_coffee">
+                    <p class="p4_but">挑豆</p>
+                </div>
+                <div class="col-md-2 col-xs-6  pag2_coffee">
+                    <p class="p4_but">進豆</p>
+                </div>
+                <div class="col-md-2 col-xs-6  pag2_coffee">
+                    <p class="p4_but">吸熱</p>
+                </div>
+                <div class="col-md-2 col-xs-6 pag2_coffee">
+                    <p class="p4_but">加熱</p>
+                </div>
+                <div class="col-md-2 col-xs-6  pag2_coffee">
+                    <p class="p4_but">等待一爆</p>
+                </div>
+                <div class="col-md-2 col-xs-6 pag2_coffee">
+                    <p class="p4_but">下豆</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="p4_main">
+            <p class="text-justify lead" style="font-size:20px;">
+                要烘培出一鍋好豆子，對豆子的品質斤斤計較是一定要的。烘豆前要將已被昆蟲蛀食過的死果實如黑豆、或碎豆、變色豆、過小或是過大的豆子…等等會影響烘培品質的豆子挑掉，挑豆子的過程可長可短，由於需要注意力集中才能將爛豆挑出來，這可是需要耐心及眼力的重責大任呢！
+            </p>
+        </div>
+
+        <div class="p4_main">
+            <p class="text-justify lead" style="font-size:20px;">
+                進鍋爐現在要開始烘培囉！進豆前先預熱鍋爐，就可以將預備區的豆子倒入鍋爐內。
+            </p>
+        </div>
+        <div class="p4_main">
+            <p class="text-justify lead" style="font-size:20px;">
+                豆子在這個階段開始吸熱，吸熱的時間長短各家咖啡店都有些許不同，也算是烘培師傅個人的手法。
+            </p>
+        </div>
+        <div class="p4_main">
+            <p class="text-justify lead" style="font-size:20px;">
+                吸熱完全後就點火準備加熱，這個時期要讓火力加熱到一定程度，直接跟火力相關的就是調整風門，至於火力的大小也是每家烘培商各有不同。咖啡豆的火力大小及時間長短都會直接影響咖啡的味道，因為咖啡的產區極多，每個產區的豆性都不同，所以咖啡要烘得好喝，也跟烘培師傅對豆種豆性的了解程度有絕對的關係。 </p>
+        </div>
+        <div class="p4_main">
+            <p class="text-justify lead" style="font-size:20px;">
+
+                這個階段中，師傅會在烘培過程中經由烘豆機前方的取豆棒觀看豆色，依豆色評估咖啡豆的烘培程度，鍋爐內約於200度就會產生一爆，聽聲音就知道了，聽到一爆後要看咖啡豆的豆性及每批豆子的含水量作細微的火力調整。</p>
+        </div>
+        <div class="p4_main">
+            <p class="text-justify lead" style="font-size:20px;">
+                下豆點同樣與咖啡豆的風味特色及含水量相關。 都堤咖啡的咖啡豆烘培標準，是採取國際上咖啡界中執牛耳的SCAA美國精選咖啡協會的八大標準。 下豆後冷卻然後再次挑豆。
+            </p>
         </div>
 
 
@@ -474,14 +533,6 @@
 
 
 
-    <!-- <div class="p4_main">
-            <h3>&emsp;為什麼咖啡會這麼香？</h3>
-            <p class="text-justify lead" style="font-size:20px;">
-
-                <br>&emsp;&emsp;最重要的當然是咖啡豆本身就儲存了豐富的各種原料 ，如碳水化合物、蛋白質、脂類、有機酸等…… 再經過受熱烘培就會啟動一連串複雜的反應，而造就出誘 人的香氣。
-                <br>&emsp;&emsp;而當中重要的兩種反應當屬焦糖化反應（caramelization，醣的氧化與褐變） 與梅納反應（Maillard reaction，胺基酸與醣類的反應） 這兩種反應都需要醣類的參與，生豆中含量豐富的蔗糖， 正好提供了這兩種反應所需的材料。 先前的研究也發現蔗糖含量與咖啡豆風味有著正向的相關性。 從下表中可以看出阿拉比卡（Arabica）的蔗糖（Sucrose） 在生豆時含量是羅布斯塔（Robusta）的兩倍， 也說明了阿拉比卡種的咖啡豆風味優於羅布斯塔的原因。
-            </p>
-        </div> -->
 
 
 
