第五頁面完成

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="css/coffeeImgMedia.css">
     <link rel="stylesheet" href="css/pag3.css">
     <link rel="stylesheet" href="css/pag4.css">
+    <link rel="stylesheet" href="css/pag5.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <script src="dist/jquery-loader.js"></script>
@@ -412,7 +414,7 @@
     <div id="forth">
 
         <div class="col-md-12">
-            <p id="pag3_text" style="padding-top:70px;">豆の烘焙</p>
+            <p id="pag3_text">豆の烘焙</p>
         </div>
 
         <div class="container-fluid">
@@ -532,10 +534,28 @@
     </div>
 
 
+    <div id="five">
 
+
+        <img src="images/le.jpg" class="dL le">
+        <div class="five_main_1">
+
+            <strong>LELE</strong>
+            <p>為了寫這網頁大概也喝了不下100杯的咖啡了吧！</p>
+
+        </div>
+
+        <img src="images/lun.jpg " class="dL lun ">
+        <div class="five_main_2 ">
+            <strong>LUN</strong><br>
+
+        </div>
+    </div>
 
 
 
 </body>
+
+</html>
 
 </html>
