--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Coffee Parallax Scrolling</title>
+
+    <link rel="Shortcut Icon" type="image/x-icon" href="images/coffeeIcon.ico">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css"> -->
