--- a/index.html
+++ b/index.html
@@ -541,23 +541,16 @@
 
         <img src="images/le.jpg" class="dL le">
         <div class="five_main_1">
-
             <strong>LELE</strong>
             <p>為了寫這網頁大概也喝了不下100杯的咖啡了吧！</p>
-
         </div>
 
         <img src="images/lun.jpg " class="dL lun ">
         <div class="five_main_2 ">
             <strong>LUN</strong><br>
-
+            <p>跑咖啡廳跑到咖啡中毒了</p>
         </div>
     </div>
-
-
-
 </body>
-
-</html>
 
 </html>
