--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
         <img src="images/le.jpg" class="dL le">
         <div class="five_main_1">
             <strong>LELE</strong>
-            <p>為了寫這網頁大概也喝了不下100杯的咖啡了吧！</p>
+            <p>目標：跑遍高雄的咖啡館</p>
         </div>
 
         <img src="images/lun.jpg " class="dL lun ">
