更改頁面三背景

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 </head>
 
 <body>
+
     <nav class="navbar-default navbar-fixed-top" role="navigation" style="background-color: #4d342f;box-shadow:5px 0px 12px black;padding:3px;">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -551,6 +552,81 @@
             <p>跑咖啡廳跑到咖啡中毒了</p>
         </div>
     </div>
+</body>
+
+</html>
+所以咖啡要烘得好喝，也跟烘培師傅對豆種豆性的了解程度有絕對的關係。 </p>
+</div>
+<div class="p4_main">
+    <p class="text-justify lead" style="font-size:20px;">
+
+        這個階段中，師傅會在烘培過程中經由烘豆機前方的取豆棒觀看豆色，依豆色評估咖啡豆的烘培程度，鍋爐內約於200度就會產生一爆，聽聲音就知道了，聽到一爆後要看咖啡豆的豆性及每批豆子的含水量作細微的火力調整。</p>
+</div>
+<div class="p4_main">
+    <p class="text-justify lead" style="font-size:20px;">
+        下豆點同樣與咖啡豆的風味特色及含水量相關。 都堤咖啡的咖啡豆烘培標準，是採取國際上咖啡界中執牛耳的SCAA美國精選咖啡協會的八大標準。 下豆後冷卻然後再次挑豆。
+    </p>
+</div>
+
+
+</div>
+
+
+<div id="five">
+
+
+    <img src="images/le.jpg" class="dL le">
+    <div class="five_main_1">
+        <strong>LELE</strong>
+        <p>目標：跑遍高雄的咖啡館</p>
+    </div>
+
+    <img src="images/lun.jpg " class="dL lun ">
+    <div class="five_main_2 ">
+        <strong>LUN</strong><br>
+        <p>跑咖啡廳跑到咖啡中毒了</p>
+    </div>
+</div>
+</body>
+
+</html>
+</div>
+</div>
+</body>
+
+</html>
+所以咖啡要烘得好喝，也跟烘培師傅對豆種豆性的了解程度有絕對的關係。 </p>
+</div>
+<div class="p4_main">
+    <p class="text-justify lead" style="font-size:20px;">
+
+        這個階段中，師傅會在烘培過程中經由烘豆機前方的取豆棒觀看豆色，依豆色評估咖啡豆的烘培程度，鍋爐內約於200度就會產生一爆，聽聲音就知道了，聽到一爆後要看咖啡豆的豆性及每批豆子的含水量作細微的火力調整。</p>
+</div>
+<div class="p4_main">
+    <p class="text-justify lead" style="font-size:20px;">
+        下豆點同樣與咖啡豆的風味特色及含水量相關。 都堤咖啡的咖啡豆烘培標準，是採取國際上咖啡界中執牛耳的SCAA美國精選咖啡協會的八大標準。 下豆後冷卻然後再次挑豆。
+    </p>
+</div>
+
+
+</div>
+
+
+<div id="five">
+
+
+    <img src="images/le.jpg" class="dL le">
+    <div class="five_main_1">
+        <strong>LELE</strong>
+        <p>目標：跑遍高雄的咖啡館</p>
+    </div>
+
+    <img src="images/lun.jpg " class="dL lun ">
+    <div class="five_main_2 ">
+        <strong>LUN</strong><br>
+        <p>跑咖啡廳跑到咖啡中毒了</p>
+    </div>
+</div>
 </body>
 
 </html>
