--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Coffee Parallax Scrolling</title>
+    <title>Coffee</title>
 
     <link rel="Shortcut Icon" type="image/x-icon" href="images/coffeeIcon.ico">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"> -->
